MD Settings: allow changing to GTK+ theme on Linux

R=dpapad@chromium.org
BUG=632376
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:closure_compilation

Review-Url: https://codereview.chromium.org/2413623004
Cr-Commit-Position: refs/heads/master@{#425149}

Former-commit-id: 128f6569dc555f54ec1f09dd117ac73311597734