chrome/browser/ui/webui/settings/appearance_handler.h
@@ -7,8 +7,6 @@
 
 #include "base/macros.h"
 #include "chrome/browser/ui/webui/settings/settings_page_ui_handler.h"
-#include "content/public/browser/notification_observer.h"
-#include "content/public/browser/notification_registrar.h"
 
 namespace base {
 class ListValue;
@@ -23,8 +21,7 @@ class Profile;
 namespace settings {
 
 // Chrome "Appearance" settings page UI handler.
-class AppearanceHandler : public SettingsPageUIHandler,
-                          public content::NotificationObserver {
+class AppearanceHandler : public SettingsPageUIHandler {
  public:
   explicit AppearanceHandler(content::WebUI* webui);
   ~AppearanceHandler() override;
@@ -35,19 +32,13 @@ class AppearanceHandler : public SettingsPageUIHandler,
   void OnJavascriptDisallowed() override;
 
  private:
-  // content::NotificationObserver implementation.
-  void Observe(int type,
-               const content::NotificationSource& source,
-               const content::NotificationDetails& details) override;
+  // Changes the UI theme of the browser to the default theme.
+  void HandleUseDefaultTheme(const base::ListValue* args);
 
-  // Whether the theme can be reset.
-  bool ResetThemeEnabled() const;
-
-  // Resets the UI theme of the browser to the default theme.
-  void HandleResetTheme(const base::ListValue* args);
-
-  // Sends the enabled state of the reset-theme control to the JS.
-  void HandleGetResetThemeEnabled(const base::ListValue* args);
+#if defined(OS_LINUX) && !defined(OS_CHROMEOS)
+  // Changes the UI theme of the browser to the system (GTK+) theme.
+  void HandleUseSystemTheme(const base::ListValue* args);
+#endif
 
 #if defined(OS_CHROMEOS)
   // Open the wallpaper manager app.
@@ -55,9 +46,6 @@ class AppearanceHandler : public SettingsPageUIHandler,
 #endif
 
   Profile* profile_;  // Weak pointer.
-
-  // Used to register for relevant notifications.
-  content::NotificationRegistrar registrar_;
 
   DISALLOW_COPY_AND_ASSIGN(AppearanceHandler);
 };
