chrome/browser/resources/settings/appearance_page/appearance_browser_proxy.js
@@ -8,15 +8,20 @@ cr.define('settings', function() {
 
   AppearanceBrowserProxy.prototype = {
     /**
-     * @return {!Promise<boolean>} Whether the theme may be reset.
+     * @param {string} themeId
+     * @return {!Promise<!chrome.management.ExtensionInfo>} Theme info.
      */
-    getResetThemeEnabled: assertNotReached,
+    getThemeInfo: assertNotReached,
 
 <if expr="chromeos">
     openWallpaperManager: assertNotReached,
 </if>
 
-    resetTheme: assertNotReached,
+    useDefaultTheme: assertNotReached,
+
+<if expr="is_linux and not chromeos">
+    useSystemTheme: assertNotReached,
+</if>
   };
 
   /**
@@ -29,8 +34,10 @@ cr.define('settings', function() {
 
   AppearanceBrowserProxyImpl.prototype = {
     /** @override */
-    getResetThemeEnabled: function() {
-      return cr.sendWithPromise('getResetThemeEnabled');
+    getThemeInfo: function(themeId) {
+      return new Promise(function(resolve) {
+        chrome.management.get(themeId, resolve);
+      });
     },
 
 <if expr="chromeos">
@@ -41,9 +48,16 @@ cr.define('settings', function() {
 </if>
 
     /** @override */
-    resetTheme: function() {
-      chrome.send('resetTheme');
+    useDefaultTheme: function() {
+      chrome.send('useDefaultTheme');
     },
+
+<if expr="is_linux and not chromeos">
+    /** @override */
+    useSystemTheme: function() {
+      chrome.send('useSystemTheme');
+    },
+</if>
   };
 
   return {
